fixes radio button wrapping

--- a/src/components/Panel/Panel.module.scss
+++ b/src/components/Panel/Panel.module.scss
@@ -100,5 +100,5 @@
 }
 
 .formRow {
-  flex-wrap: unset;
+  flex-wrap: nowrap !important;
 }
